# Octave

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  meson.build
dependencies/: CMakeLists.txt
dependencies/glad/src/: glad.c
dependencies/simpleini/: CMakeLists.txt  ConvertUTF.c
examples/: CleanSlate.cpp  ModelViewerApp.cpp  PongApp.cpp  SimpleApp.cpp  meson.build
examples/common/: Camera.cpp  Camera.hpp  Helpers.hpp  Sample.cpp  Sample.hpp  SampleApplication.hpp  meson.build
resources/config/: Engine.ini  engine.ini
resources/objects/MemoryCard/: MemoryCard.dae  MemoryCard.mtl
resources/objects/Strawberry/: Strawberry.mtl
resources/shaders/: basic.frag  basic.vert  common.glsl  light.frag  lit.frag  lit.vert  mesh.frag  single_color.frag  single_color.vert  skybox.frag  skybox.vert
scripts/: create_class.py  gamecontrollerdb.py
src/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommonInclude.hpp  Config.cpp  Config.hpp  EntryPoint.hpp  Exception.cpp  Exception.hpp  GeometricPrimitive.cpp  GeometricPrimitive.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Main.cpp  Octave.cpp  Octave.hpp  StepTimer.cpp  StepTimer.hpp  meson.build  pch.hpp
src/audio/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Listener.cpp  Listener.hpp  Source.cpp  Source.hpp  alCommon.hpp  stb_vorbis.cpp
src/core/: Callback.hpp  Log.cpp  Log.hpp  Platform.hpp  Types.hpp  Window.cpp  Window.hpp  meson.build
src/core/SDL/: PlatformSDL.cpp  WindowSDL.cpp  WindowSDL.hpp  meson.build
src/core/SDL2/: Platform.cpp  WindowSDL2.cpp  WindowSDL2.hpp  meson.build
src/core/glfw/: GLFWError.cpp  GLFWError.hpp  GLFWWindow.cpp  GLFWWindow.hpp  Platform.cpp  PlatformGLFW.cpp  Window.cpp  WindowGLFW.cpp  WindowGLFW.hpp  meson.build
src/graphics/: Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Colour.hpp  Graphics.hpp  GraphicsContext.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Program.hpp  Renderer.cpp  Renderer.hpp  Resources.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Structs.hpp  Texture.cpp  Texture.hpp  VertexArrayLayout.cpp  VertexArrayLayout.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  meson.build  stb_include.h
src/graphics/OpenGL/: Buffer.cpp  Buffer.hpp  BufferGL.cpp  BufferGL.hpp  Fence.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsContextGL.cpp  GraphicsContextGL.hpp  GraphicsDevice.cpp  GraphicsDeviceGL.cpp  GraphicsDeviceGL.hpp  GraphicsSystemGL.cpp  GraphicsSystemGL.hpp  IndexBufferGL.cpp  IndexBufferGL.hpp  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.hpp  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.hpp  Pipeline.cpp  Pipeline.hpp  Program.cpp  Program.hpp  ProgramGL.cpp  ProgramGL.hpp  RendererGL.cpp  RendererGL.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  ShaderGL.cpp  ShaderGL.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  TextureGL.cpp  TextureGL.hpp  (+7 more)
src/helpers/: CMakeLists.txt  GeometricPrimitive.cpp  GeometricPrimitive.hpp  StepTimer.cpp  StepTimer.hpp
src/input/: CMakeLists.txt  Gamepad.cpp  Gamepad.hpp  InputSystem.hpp  Keyboard.cpp  Keyboard.hpp
src/input/Null/: InputSystemNull.hpp
src/input/glfw/: GamepadGLFW.cpp  GamepadGLFW.hpp  InputSystemGLFW.cpp  InputSystemGLFW.hpp
src/pch/: pch.cpp  pch.hpp
src/platform/: CMakeLists.txt  Platform.hpp  Window.cpp  Window.hpp
src/platform/glfw/: GLFWError.cpp  GLFWError.hpp  GlfwError.cpp  GlfwError.hpp  GlfwWindow.cpp  GlfwWindow.hpp  PlatformGLFW.cpp  PlatformGLFW.hpp  PlatformGlfw.cpp  PlatformGlfw.hpp  WindowGLFW.cpp  WindowGLFW.hpp
src/resources/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
src/samples/: CMakeLists.txt  ModelViewerSample.cpp  ModelViewerSample.hpp  Sample.cpp  Sample.hpp
src/scene/: CMakeLists.txt  MeshComponent.cpp  MeshComponent.hpp  Object.cpp  Object.hpp
subprojects/: sdl2.wrap
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/simpleini/: meson.build
subprojects/simpleini/include/: ConvertUTF.h  SimpleIni.h
subprojects/stb_image/: meson.build
tests/: LayerStackTest.cpp  meson.build
