rhi_opengl_dep = declare_dependency(
	include_directories: include_directories(''),
	sources: [
		'Buffer.cpp',
		'Buffer.hpp',
		'Fence.hpp',
		'GraphicsContext.cpp',
		'GraphicsDevice.cpp',
		'Program.cpp',
		'Program.hpp',
		'Sampler.cpp',
		'Sampler.hpp',
		'Shader.cpp',
		'Shader.hpp',
		'Texture2D.cpp',
		'Texture2D.hpp',
		'VertexArray.cpp',
		'VertexArray.hpp',
	]
)

add_project_arguments('-DOGT_RHI_OPENGL', language: 'cpp')
