rhi_opengl_dep = declare_dependency(
	include_directories: include_directories(''),
	sources: [
		'Buffer.cpp',
		'Buffer.hpp',
		'GraphicsContext.cpp',
		'GraphicsContext.hpp',
		'GraphicsDevice.cpp',
		'Program.cpp',
		'Program.hpp',
		'Sampler.hpp',
		'Shader.cpp',
		'Shader.hpp',
		'Texture2D.cpp',
		'Texture2D.hpp'
	]
)

add_project_arguments('-DOGT_RHI_OPENGL', language: 'cpp')
